Touched up a few things in the version checker.